fixed nav bar, is now on right in fullscreen. Changed .innerCard content to ul from p although now it is overflowing, needs attention. Changed somebackground photos and added photo credits to README.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,13 @@
 :root{
     --colorBack: rgb(30, 30, 30);
-    --colorBackThrough: rgba(30, 30, 30, .99);
+    --colorBackThrough: rgba(30, 30, 30, .95);
     --colorBorder: rgb(100, 255, 255); 
+    --colorBorderLinks: rgba(20, 20, 20, 1);
     --colorCard: rgba(255, 225, 169, 0.5);
     --colorLink: rgb(131, 40, 40);
     --colorTag: rgba(255, 225, 169, .9);
     --colorText: rgb(191, 252, 252);
+    --colorTextDark: rgb(7, 44, 44);
     --fontMain: 'spartan', sans-serif;
 }
 
@@ -62,11 +64,11 @@ header h3 {
 }
 
 .aboutMe{
-    color:chartreuse;
-    margin: 10px 0;
+    color: var(--colorText);
+    margin: 20px auto;
     width: 90%;
     text-align: center;
-    justify-self: center;
+   
 }
 
 .aboutMe span{
@@ -85,7 +87,8 @@ nav li {
     border: 2px solid rgb(20, 20 ,20);
     border-bottom: none;
     font-size: 1.5rem;
-    padding: 10px 5px;
+    height:fit-content;
+    padding: 10px 0;
     margin: 0 5px;
     text-align: center;
     width: 80vw;
@@ -94,7 +97,10 @@ nav li {
 nav li:last-child {
     border-bottom: 2px solid rgb(20, 20 ,20);
 }
-
+nav a {
+    margin: auto auto;
+    padding: 7px 3px;
+}
 
 /* background elements */
 
@@ -116,14 +122,14 @@ nav li:last-child {
 
 .mainBack2 {
     /* background-image:linear-gradient(blue, purple, darkgreen); */
-    background-image: url("../images/tesla.jpg");
+    background-image: url("../images/ipod.jpg");
     background-size: contain;
     
 }
 
 .mainBack3 {
     /* background-image:linear-gradient(khaki, teal, maroon); */
-    background-image: url("../images/samsung-memory1.jpg");
+    background-image: url("../images/code.jpg");
     background-size: contain;
     
 }
@@ -133,7 +139,7 @@ nav li:last-child {
     background: var(--colorBackThrough);
     display: flex;
     flex-direction: column;
-    height: 300px;  
+    min-height: 200px;  
     position: absolute;
     margin-top: -150px;
     width: 100%;
@@ -150,8 +156,13 @@ nav li:last-child {
 }
 
 .blocker p{
+    margin: 10px 0;
     width: 80%;
     /* add change to media */
+}
+
+#lastBlocker {
+    height: 150px;
 }
 
 /* card build */
@@ -166,33 +177,40 @@ nav li:last-child {
     background: var(--colorCard);
     border: 2px solid var(--colorBorder);
     display: flex;
-    height: 100px;
+    min-height: 100px;
     position: absolute;
     top: 500px;
     width: 90vw;
     transition: all 100ms ease-in-out;
 }
 .card a {
+    /* align-self: flex-start; */
     background: var(--colorTag);
     border: 2px solid var(--colorBorder);
     color: var(--colorLink);
+    display: flex;
     font-size: 1.5rem;
+    /* justify-self: center; */
     height: 30px;
     padding: 10px 5px 5px 5px;
     position: relative;
     text-decoration: none;
     top: 15px;
-    width: fit-content;
+    min-width: fit-content;
 }
+
 
 .cardEven a{
     justify-self: flex-end;
-    right: -10px;
-    
+    right: -10px;  
 }
 
 .cardOdd a{    
     left: -10px;
+}
+
+#card2, #card3 {
+    color: var(--colorTextDark);
 }
 
 .cardEven .card {
@@ -203,34 +221,24 @@ nav li:last-child {
 
 .innerCard {
     display:flex;
-    flex-direction: column;
-    /* text-align: center; */
-    padding: 10px 20px;
+    padding: 10px 0px;
+    /* position: relative; */
+    text-align: center;
+    width: 100%;
 }
 
 .innerCard h6 {
     font-size: 1.5rem;
     position:relative;
-    
 }
 
-.cardEven h6{
-    left: -80%;
+.innerCard ul {
+    position: relative;
+    margin: 0 10px;
 }
 
-.innerCard p{
-    font-size: 1rem;
-    font-weight: 400;
-    position:relative;
-}
-
-.cardOdd p{
-    right: -200px;
-}
-
-
-.cardEven p{
-    right: 10%;
+.cardEven .innerCard {
+    /* left: 4%; */
 }
 
 
@@ -238,9 +246,9 @@ footer {
     background: var(--colorBack);
     display: flex;
     height: 150px;
-    position:absolute;
+    position:relative;
     width: 100%;
-    margin-top: -150px;
+    /* margin-top: -150px; */
 }
 
 footer ul {
@@ -277,45 +285,48 @@ footer a{
     nav {
         display:flex;
         flex-direction: row;
-        /* justify-content: center; */
-        width: max-content;
+        justify-content: flex-end;
     }
 
     nav ul{
         display: flex;
-        /* flex-direction: row; */
     }
     
     nav li {
-        border: 2px solid rgba(20, 20, 20, 1);
+        align-items: center;
+        border: 2px solid var(--colorBorderLinks);
         border-right: none;
+        display: flex;
         flex: 1 0 50px;
+        justify-content: center;
         width:max-content;
         margin: 0 0;
     }
 
     nav li:last-child{
-        border-right: 2px solid rgba(20,20,20,1);
+        border-right: 2px solidvar(--colorBorderLinks);
     }
 
-    /* nav li:hover {
-        color: chartreuse;
-    } */
+    nav a {
+        padding: auto; 
+    }
+
+    nav li:hover {
+        background: var(--colorCard);
+    }
+
+    nav li:hover a {
+        color: var(--colorLink);    
+    }
 
     .card {
         width: 60vw;
     }
     
-    .cardOdd .card:hover {
-        box-shadow: 0px 0px 3px 1px var(--colorBorder);
-         box-shadow: inset 0px 0px 3px 1px var(--colorBorder);
-    }
-    
-    /* .cardEven .card:hover {
-        box-shadow: 3px 3px 8px 1px black;
-    } */
 
     .card:hover {
+        box-shadow: 0px 0px 3px 1px var(--colorBorder);
+        box-shadow: inset 0px 0px 3px 1px var(--colorBorder);
         height: 101px;
         width: 60.2vw;
     }
